<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">gideon_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_monthly_living">Monthly living expenses</string>
<string name="lbl_m">M</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
<string name="lbl_s">S</string>
<string name="lbl_t">T</string>
<string name="lbl_w">W</string>
<string name="msg_sign_up_for_deb2">Sign up for debt counselling</string>
<string name="msg_to_qualify_for">To qualify for Debt Consolidation, you must be over the age of 18, permanently employed and earn a personal income of atleast R3500 Per month</string>
<string name="msg_with_experience">With experience managing clients financial concerns since 2022, our team has the tools to help you quickly and efficiently.

Take the first step toward your debt by contacting us today</string>
<string name="msg_nbcleanslate_co">nbcleanslate.com</string>
<string name="lbl_admin_dashboard">ADMIN Dashboard</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_mon_jan_13">Mon, Jan 13</string>
<string name="lbl_log_out">Log out</string>
<string name="lbl_timesheet">Timesheet</string>
<string name="lbl_sign_in">Sign in</string>
<string name="msg_select_date_for">Select date for consultant to contact you </string>
<string name="lbl_decline_offer">DECLINE OFFER</string>
<string name="msg_apply_for_debt2">APPLY FOR DEBT COUNSELLING</string>
<string name="msg_your_applicatio">Your application for Debt Consolidation Loan was approved</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_4b">4B</string>
<string name="lbl_admin_dashboard2">Admin dashboard</string>
<string name="lbl_f">F</string>
<string name="msg_applicant_detai">Applicant Details</string>
<string name="msg_sign_up_for_deb">SIGN UP FOR DEBT COUNSELLING</string>
<string name="lbl_click_here">Click here</string>
<string name="msg_we_can_add_sens">We can add sensible status info here</string>
<string name="lbl_people">People</string>
<string name="lbl_full_names">Full names</string>
<string name="msg_upload_files_fo">Upload files for debt counselling </string>
<string name="msg_consolidate_my3">Consolidate my debt upload</string>
<string name="lbl_accept_offer">ACCEPT OFFER</string>
<string name="msg_consolidate_my2">Consolidate my debt </string>
<string name="msg_consolidate_my6">Consolidate my debt status Two</string>
<string name="msg_consolidate_my5">Consolidate my debt status One</string>
<string name="msg_consolidate_my4">Consolidate my debt status</string>
<string name="lbl_otp">OTP</string>
<string name="lbl_2020">2020</string>
<string name="msg_to_apply_for_de2">To apply for Debt Counselling, go ahead and submit the information needed </string>
<string name="lbl_select_service">Select Service </string>
<string name="msg_relationship_st">Relationship Status</string>
<string name="lbl_30">30</string>
<string name="lbl_31">31</string>
<string name="lbl_administration">Administration</string>
<string name="lbl_start_here">Start Here</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_verify_login">Verify Login</string>
<string name="msg_homeowner_statu">Homeowner Status</string>
<string name="msg_book_a_consulta">BOOK A CONSULTATION</string>
<string name="lbl_id_number">ID NUMBER</string>
<string name="msg_to_apply_for_de">To apply for Debt Consolidation, go ahead and submit the information needed </string>
<string name="msg_debt_consolidat2">DEBT CONSOLIDATION STATUS</string>
<string name="lbl_reports">Reports</string>
<string name="lbl_monthly_income">Monthly income</string>
<string name="msg_your_applicatio4">Your application for Debt Counselling  was rejected</string>
<string name="lbl_20">20</string>
<string name="lbl_23">23</string>
<string name="lbl_24">24</string>
<string name="lbl_21">21</string>
<string name="lbl_22">22</string>
<string name="lbl_27">27</string>
<string name="lbl_28">28</string>
<string name="msg_take_the_first">Take the first step by providing us with the following initial information</string>
<string name="msg_your_applicatio2">Your application for Debt Consolidation Loan was rejected</string>
<string name="lbl_25">25</string>
<string name="msg_your_applicatio3">Your application for Debt Counselling  was approved</string>
<string name="lbl_26">26</string>
<string name="lbl_29">29</string>
<string name="msg_debt_counsellin">DEBT COUNSELLING</string>
<string name="msg_your_documents">Your documents were received and is currently under review</string>
<string name="lbl_calendar">Calendar</string>
<string name="msg_document_submis">Document Submission</string>
<string name="msg_a_better_way_to">A better Way to Reset</string>
<string name="lbl_login2">Login</string>
<string name="lbl_12">12</string>
<string name="lbl_13">13</string>
<string name="lbl_rememebr_me">Rememebr me</string>
<string name="lbl_10">10</string>
<string name="lbl_11">11</string>
<string name="lbl_splash_screen">Splash screen</string>
<string name="lbl_16">16</string>
<string name="lbl_training">Training</string>
<string name="lbl_17">17</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet. Id quas numquam non maiores odio nam amet libero nam voluptatem dignissimos</string>
<string name="lbl_14">14</string>
<string name="lbl_15">15</string>
<string name="lbl_18">18</string>
<string name="msg_mfa_verificatio">MFA Verification</string>
<string name="lbl_19">19</string>
<string name="lbl_e_mail_address">E-mail address</string>
<string name="lbl">************</string>
<string name="lbl_submit">Submit</string>
<string name="lbl_projects">Projects</string>
<string name="msg_hi_monique_wha">Hi Monique, What would you like </string>
<string name="msg_hi_fullname_sur">Hi Fullname Surname!
Please use the OTP received via email and sms to verify you and continue your journey</string>
<string name="lbl_email">email</string>
<string name="msg_id_document_bac">ID Document Back</string>
<string name="lbl_dashboard">Dashboard</string>
<string name="lbl_surname">Surname</string>
<string name="lbl_1">1</string>
<string name="lbl_2">2</string>
<string name="msg_apply_for_debt">APPLY FOR DEBT CONSOLIDATION</string>
<string name="lbl_3">3</string>
<string name="lbl_4">4</string>
<string name="lbl_5">5</string>
<string name="lbl_6">6</string>
<string name="lbl_7">7</string>
<string name="msg_reflects_credit">Reflects credit score (API DATA EXPERIAN)</string>
<string name="lbl_8">8</string>
<string name="lbl_9">9</string>
<string name="msg_proof_of_reside">Proof of Residence</string>
<string name="msg_applying_as_ind">Applying as individual / Couple</string>
<string name="msg_proceed_to_uplo">PROCEED TO UPLOAD DOCUMENTS</string>
<string name="lbl_login">LOGIN</string>
<string name="msg_welcome_to_a_ne">Welcome to a New Beginning a Clean Slate</string>
<string name="lbl_four">Four</string>
<string name="msg_total_debt_amou">Total Debt Amount </string>
<string name="msg_debt_consolidat">DEBT CONSOLIDATION</string>
<string name="lbl_contact_number">Contact number</string>
<string name="lbl_sign_up_here">Sign up here</string>
<string name="msg_not_sure_which">Not sure which documents you should have ready?</string>
<string name="msg_id_document_fro">ID Document Front</string>
<string name="msg_consolidate_my">CONSOLIDATE MY DEBT</string>
<string name="msg_please_select_a">Please Select a date, time when the consultant can reach you </string>
<string name="msg_debt_counsellin6">Debt Counselling status One</string>
<string name="msg_i_have_read_and">I have read and agree to the Terms and Conditions and Privacy Policy</string>
<string name="msg_debt_counsellin5">Debt Counselling status</string>
<string name="msg_debt_counsellin4">Debt Counselling status Two</string>
<string name="msg_debt_counsellin3">DEBT COUNSELLING STATUS</string>
<string name="msg_debt_counsellin2">DEBT COUNSELLING  STATUS</string>
<string name="lbl_help">Help</string>
<string name="lbl_january_2020">January 2020</string>
<string name="lbl_credit_score">Credit score</string>
<string name="msg_employment_stat">Employment Status</string>
<string name="msg_earn_r100_off">EARN R100- OFF YOUR DEBT BY
 COMPLETEING A SELF-PACED COURSE</string>
<string name="lbl_proof_of_income">Proof of income</string>
<string name="lbl_verify_signup">Verify Signup</string>
</resources>
