<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="selectDateForConsultantToContactYouVM" type="com.gideonsapplication.app.modules.selectdateforconsultanttocontactyou.data.viewmodel.SelectDateForConsultantToContactYouVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSelectdatefor"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageCroppedNBlogo"
            android:layout_gravity="start"
            android:layout_height="@dimen/_6pxh"
            android:layout_marginEnd="@dimen/_117pxh"
            android:layout_marginStart="@dimen/_117pxh"
            android:layout_width="@dimen/_119pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_croppednblogo"
            tools:ignore="ContentDescription" tools:src="@drawable/img_croppednblogo"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_75pxv"
            android:layout_width="match_parent"
            android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtLanguage}"
            style="@style/txtPoppinsregular13" tools:text="@string/msg_please_select_a"/>
        <FrameLayout android:id="@+id/frameModalHeaderGr"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_100pxv"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_289pxh">
            <View android:background="@color/cyan_600"
                android:id="@+id/viewModalheader"
                android:layout_gravity="end"
                android:layout_height="@dimen/_100pxv" android:layout_width="@dimen/_322pxh"/>
            <LinearLayout android:id="@+id/linearColumnzipcode"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtZipcode"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtZipcode}"
                    style="@style/txtRobotoregular14" tools:text="@string/lbl_2020"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtCurrentDate"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtCurrentDate}"
                    style="@style/txtRobotoregular36" tools:text="@string/lbl_mon_jan_13"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout android:id="@+id/frameModalBody"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_321pxv"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh" android:layout_width="@dimen/_289pxh">
            <View android:background="@color/white_A700_66"
                android:id="@+id/viewModalbox"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_396pxh" android:layout_width="@dimen/_322pxh"/>
            <LinearLayout android:id="@+id/linearColumnarrowright"
                android:layout_gravity="top|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearMonthswitcher"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowright"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginBottom="@dimen/_17pxv"
                        android:layout_width="@dimen/_21pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowright"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
                    <LinearLayout android:id="@+id/linearRowmonth"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_70pxh"
                        android:layout_weight="0.87"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtMonth"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_22pxv"
                            android:layout_weight="0.8"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtMonth}"
                            style="@style/txtRobotobold14" tools:text="@string/lbl_january_2020"/>
                        <ImageView android:id="@+id/imageArrowrightOne"
                            android:layout_height="@dimen/_20pxh"
                            android:layout_marginBottom="@dimen/_17pxv"
                            android:layout_marginStart="@dimen/_37pxh"
                            android:layout_width="@dimen/_21pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrowright"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearDaysweek"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_29pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtS"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.12"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtS}"
                        style="@style/txtRobotolight13" tools:text="@string/lbl_s"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtM"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_29pxh"
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtM}"
                        style="@style/txtRobotolight13" tools:text="@string/lbl_m"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtT"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtT}"
                        style="@style/txtRobotolight13" tools:text="@string/lbl_t"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtW"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_weight="0.18"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtW}"
                        style="@style/txtRobotolight13" tools:text="@string/lbl_w"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_weight="0.12"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtTOne}"
                        style="@style/txtRobotolight13" tools:text="@string/lbl_t"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtF"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_31pxh"
                        android:layout_weight="0.12"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtF}"
                        style="@style/txtRobotolight13" tools:text="@string/lbl_f"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_weight="0.12"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtSOne}"
                        style="@style/txtRobotolight13" tools:text="@string/lbl_s"/>
                </LinearLayout>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearWeek1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_131pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtOne"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtOne}"
                        style="@style/txtRobotolight13_1" tools:text="@string/lbl_1"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30pxh"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtTwo}"
                        style="@style/txtRobotolight13_1" tools:text="@string/lbl_2"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThree"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_31pxh"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtThree}"
                        style="@style/txtRobotolight13_1" tools:text="@string/lbl_3"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtFour"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{selectDateForConsultantToContactYouVM.selectDateForConsultantToContactYouModel.txtFour}"
                        style="@style/txtRobotolight13_1" tools:text="@string/lbl_4"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:gravity="end"
                    android:id="@+id/recyclerListfive"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    itemSpace="@{@dimen/_18pxh}" tools:itemCount="4" tools:listitem="@layout/row_listfive"/>
            </LinearLayout>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnBookAConsultation"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_45pxv"
            android:layout_marginBottom="@dimen/_22pxv"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="@dimen/_246pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_27pxh"
            android:paddingStart="@dimen/_27pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/msg_book_a_consulta"
            android:textAllCaps="false" style="@style/btnSolidRounded_6" tools:text="@string/msg_book_a_consulta"/>
    </LinearLayout>
</layout>
