<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="bVM" type="com.gideonsapplication.app.modules.b.data.viewmodel.BVM"/>
    </data>
    <LinearLayout android:id="@+id/linear4B"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageCroppedNBlogo"
            android:layout_gravity="start"
            android:layout_height="@dimen/_6pxh"
            android:layout_marginEnd="@dimen/_117pxh"
            android:layout_marginStart="@dimen/_117pxh"
            android:layout_width="@dimen/_119pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_croppednblogo"
            tools:ignore="ContentDescription" tools:src="@drawable/img_croppednblogo"/>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackwelcometoane"
            android:layout_height="@dimen/_210pxv"
            android:layout_marginTop="@dimen/_27pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageHeaderImageOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_210pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_headerimage1_2}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_headerimage1_2"/>
            <LinearLayout android:id="@+id/linearColumnwelcometoane"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_80pxh"
                android:layout_marginStart="@dimen/_80pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:gravity="start"
                    android:id="@+id/txtWelcometoaNe"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@{bVM.bModel.txtWelcometoaNe}"
                    style="@style/txtSourceSansProbold22" tools:text="@string/msg_welcome_to_a_ne"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtAbetterWayto"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_37pxh"
                    android:layout_marginStart="@dimen/_37pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{bVM.bModel.txtAbetterWayto}"
                    style="@style/txtSourceSansProsemibold15" tools:text="@string/msg_a_better_way_to"/>
            </LinearLayout>
        </FrameLayout>
        <ImageView android:id="@+id/imageMail"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_63pxh"
            android:layout_marginEnd="@dimen/_78pxh"
            android:layout_marginStart="@dimen/_78pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="@dimen/_69pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_mail_63x69"
            tools:ignore="ContentDescription" tools:src="@drawable/img_mail_63x69"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_70pxh"
            android:layout_marginStart="@dimen/_78pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:text="@{bVM.bModel.txtDescription}"
            style="@style/txtPoppinsregular13" tools:text="@string/msg_hi_fullname_sur"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnOtp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_78pxh"
            android:layout_marginStart="@dimen/_78pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_otp" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_otp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerifySignup"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_78pxh"
            android:layout_marginStart="@dimen/_78pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_verify_signup"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_verify_signup"/>
    </LinearLayout>
</layout>
